<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/bgStyle">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bmi_height"
        style="@style/textStyle"/>

    <EditText
        android:id="@+id/fieldheight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:hint="@string/enter_height"
        style="@style/hintStyle"/>

    <TextView
        android:id="@+id/fieldweight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bmi_weight"
        style="@style/textStyle"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_weight"
        style="@style/hintStyle" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/bmi_btn" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="30dp"
        style="@style/textStyle"
        android:text="bb" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="30dp"
        style="@style/textStyle"
        android:text="dd" />

</LinearLayout>